--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
     "bootstrap": "^4.3.1",
+    "ngx-file-drop": "^8.0.8",
     "rxjs": "~6.4.0",
     "sweetalert2": "^8.18.0",
     "tslib": "^1.10.0",
