--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,14 @@
             "scripts": []
           },
           "configurations": {
+            "development": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ]
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -67,6 +75,9 @@
             "browserTarget": "front-todo:build"
           },
           "configurations": {
+            "development": {
+              "browserTarget": "front-todo:build:development"
+            },
             "production": {
               "browserTarget": "front-todo:build:production"
             }
